# grpc_services

./: Makefile  docker-compose.yml  pyproject.toml
protos/: auth.proto  permission.proto  role.proto  user.proto
