[project]
name = "auth-services"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "bcrypt<4.0",
    "grpcio>=1.76.0",
    "grpcio-tools>=1.76.0",
    "passlib>=1.7.4",
    "protobuf>=6.33.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.44",
]
